fixed header and some spacing

--- a/style.css
+++ b/style.css
@@ -4,8 +4,19 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
-.caption {
-    font: 
+/*To create a fixed header */
+.fixed-header {
+    position: fixed;
+    background-color: rgb(134, 0, 114);
+    color: #ffffff;
+    height: 125px;
+    width: 100%;
+    
+}
+
+/*Padding image to be below header */
+.image-padding {
+    margin-top: 150px;
 }
 
 /* Styling inputs with type="text" and textareas */
@@ -37,4 +48,13 @@ input [type=submit] {
     padding: 20px;
 }
 
-border-top: 2px solid red;
+a:link{
+    color: white
+}
+
+footer {
+    background-color: rgb(8, 12, 94);
+    color: white;
+    width: 100%;
+    height: 200px;
+}
